--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="static/styles.css">
 
 </head>
 
@@ -48,7 +48,7 @@
         <section class="glass">
             <div class="dashboard">
                 <div class="user">
-                    <img class="photo" src="../static/nawed.jpg" alt="Profile Photo">
+                    <img class="photo" src="static/nawed.jpg" alt="Profile Photo">
                     <h3>Nawed Ali</h3>
                     <p>Full-Stack Developer</p>
 
@@ -119,6 +119,7 @@
         </ul>
     </section>
 
+    <script src="views/index.js"></script>
 </body>
 
 </html>
