Add responsive animations

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="#">Projects</a></li>
         </ul>
 
+        <div class="burger">
         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16" height="16" viewBox="0 0 40 40"
             style=" fill:#000000;">
             <path fill="#c2e8ff" d="M1.5 18.5H38.5V21.5H1.5z"></path>
@@ -42,6 +43,7 @@
                 <path fill="#7496c4" d="M38,29v2H2v-2H38 M39,28H1v4h38V28L39,28z"></path>
             </g>
         </svg>
+        </div>
     </nav>
 
     <main>
