Add meta description

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Nawed Ali</title>
+
+    <meta name="description"
+        content="Hi, I'm a Full Stack Developer and a Computer Science Engineering sophomore from New Delhi, India. ">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,17 +35,17 @@
         </ul>
 
         <div class="burger">
-        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16" height="16" viewBox="0 0 40 40"
-            style=" fill:#000000;">
-            <path fill="#c2e8ff" d="M1.5 18.5H38.5V21.5H1.5z"></path>
-            <path fill="#7496c4" d="M38,19v2H2v-2H38 M39,18H1v4h38V18L39,18z"></path>
-            <path fill="#c2e8ff" d="M1.5 8.5H38.5V11.5H1.5z"></path>
-            <path fill="#7496c4" d="M38,9v2H2V9H38 M39,8H1v4h38V8L39,8z"></path>
-            <g>
-                <path fill="#c2e8ff" d="M1.5 28.5H38.5V31.5H1.5z"></path>
-                <path fill="#7496c4" d="M38,29v2H2v-2H38 M39,28H1v4h38V28L39,28z"></path>
-            </g>
-        </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16" height="16" viewBox="0 0 40 40"
+                style=" fill:#000000;">
+                <path fill="#c2e8ff" d="M1.5 18.5H38.5V21.5H1.5z"></path>
+                <path fill="#7496c4" d="M38,19v2H2v-2H38 M39,18H1v4h38V18L39,18z"></path>
+                <path fill="#c2e8ff" d="M1.5 8.5H38.5V11.5H1.5z"></path>
+                <path fill="#7496c4" d="M38,9v2H2V9H38 M39,8H1v4h38V8L39,8z"></path>
+                <g>
+                    <path fill="#c2e8ff" d="M1.5 28.5H38.5V31.5H1.5z"></path>
+                    <path fill="#7496c4" d="M38,29v2H2v-2H38 M39,28H1v4h38V28L39,28z"></path>
+                </g>
+            </svg>
         </div>
     </nav>
 
