--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <meta name="description"
         content="Hi, I'm a Full Stack Developer and a Computer Science Engineering sophomore from New Delhi, India. ">
+    
+    <link rel="icon" type="image/x-icon" href="static/favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
