Add intro animation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,28 @@
 </head>
 
 <body>
+
+    <!-- Landing page animation -->
+    <div class="intro">
+
+        <div class="intro-text">
+            <h1 class="hide">
+                <span class="hide-text">Hi!</span>
+            </h1>
+
+            <h1 class="hide">
+                <span class="hide-text">I'm</span>
+            </h1>
+
+            <h1 class="hide">
+                <span class="hide-text">Nawed Ali.</span>
+            </h1>
+        </div>
+    </div>
+
+    <div class="slider"></div>
+
+    <!-- Navigation Bar -->
     <nav>
         <div class="logo">
             <h4>PORTFOLIO</h4>
@@ -36,6 +58,7 @@
             <li><a href="#">Projects</a></li>
         </ul>
 
+        <!-- For Mobile Devices -->
         <div class="burger">
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16" height="16" viewBox="0 0 40 40"
                 style=" fill:#000000;">
@@ -126,6 +149,10 @@
         </ul>
     </section>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
+        integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    
     <script src="views/index.js"></script>
 </body>
 
