--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </h1>
         </div>
     </div>
-
     <div class="slider"></div>
+
 
     <!-- Navigation Bar -->
     <nav>
@@ -127,16 +127,22 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="about-me">
+                <h1>About Me</h1>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptas est inventore id animi tempora, fugit aspernatur consequuntur quia provident.</h3>
+           
+            </div>
         </section>
     </main>
 
     <div class="circle1"></div>
     <div class="circle2"></div>
 
-    <section>
-        <h2 class="skills-head">Languages & Frameworks</h2>
+    <div class="lang">
+        <h2>Languages & Frameworks</h2>
 
-        <ul id="lang">
+        <ul id="langList">
             <li>C/C++</li>
             <li>HTML5</li>
             <li>CSS3</li>
@@ -147,7 +153,7 @@
             <li>React.js</li>
             <li>MongoDB</li>
         </ul>
-    </section>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
         integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
