Add langList cards

--- a/index.html
+++ b/index.html
@@ -158,9 +158,8 @@
             <li>Pug</li>
         </ul>
         <div class="actions">
-            <button class="btn">Prev</button>
-            <button class="btn">Next</button>
-            
+            <button class="btn" id="prev">Prev</button>
+            <button class="btn" id="next">Next</button>
         </div>
 
 
