--- a/index.html
+++ b/index.html
@@ -153,16 +153,10 @@
             <li>PHP</li>
             <li>Node.js</li>
             <li>React.js</li>
-            <li>Express</li>
+            <li>Express.js</li>
             <li>MongoDB</li>
             <li>Pug</li>
-        </ul>
-        <div class="actions">
-            <button class="btn" id="prev">Prev</button>
-            <button class="btn" id="next">Next</button>
-        </div>
-
-
+        </ul>      
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
