--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="logo">
-            <h4>PORTFOLIO</h4>
+            <h3>NAWED ALI</h3>
         </div>
 
         <ul class="nav-links">
@@ -157,6 +157,14 @@
             <li>MongoDB</li>
             <li>Pug</li>
         </ul>      
+    </div>
+
+    <div class="edu">
+        <h2>Education</h2>
+    </div>
+
+    <div class="proj-and-intern">
+        <h2>Projects and Internships</h2>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
