--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Nawed Ali"
-      content="Hi, I'm a Full Stack Developer and a Computer Science Engineering sophomore from New Delhi, India."
+      content="Hi, I'm a MERN Stack Developer and a Computer Science Engineering student from New Delhi, India."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
